--- a/css/zyx.css
+++ b/css/zyx.css
@@ -69,26 +69,38 @@ h1,h2,h3,h4,h5,h6,p{
 /*受訪者介紹*/
 #受訪者介紹{
 	padding: 80px 150px 0 150px;
-	overflow: hidden;
+	/*overflow: hidden;*/
 	color: #532100;
+	font-weight: bold;
 }
 #受訪者介紹 img{
 	float: left;
 	width: 300px;
 	height: 200px;
 	border-radius: 20px;
-	margin: 10px 20px 10px 0;
+	margin: 0px 20px 10px 0;
 }
-#受訪者介紹 content{
+#受訪者介紹 h3{
 	text-align: left;
-	font-weight: bold;
-}
+	font-size: 20px;
+	color: #c55f1d;
 
+}
+#受訪者介紹 h4{
+	text-align: left;
+	line-height: 26px;
+	color: #c55f1d;
+}
+#受訪者介紹 p{
+	text-align: justify;
+	line-height: 26px;
+	text-indent: 2em;
+}
 
 /*採訪影片*/
 #採訪影片{
 	margin: 30px 120px;
-	padding: 10px 120px;
+	padding: 20px 120px;
 	color: #532100;
 	background: #fff;
 	border-radius: 50px;
@@ -103,18 +115,18 @@ h1,h2,h3,h4,h5,h6,p{
 	line-height: 50px;
 }
 .video{
-	margin: 20px auto;
+	text-align: center;
 }
-.video embed{
-	padding: 20px;
-	width: 95%;
+.video iframe{
+	width: 711px;
 	height: 400px;
 }
 
 /*舉辦活動*/
 #舉辦活動{
-	margin: 20px 120px;
+	margin: 30px 120px;
 	overflow: hidden;
+	color: #532100;
 }
 .hdtitle{
 	margin: 20px auto;
@@ -128,37 +140,12 @@ h1,h2,h3,h4,h5,h6,p{
 }
 /*輪播圖*/
 .輪播圖{
-	margin: 10px 50px;
-}
-.輪播圖 li{
-	float: left;
+	margin: 40px;
 }
 .輪播圖 img{
-	width: 300px;
-	height: 200px;
-}
-
-/*店家位置*/
-#店家位置{
-	margin: 30px 120px ;
-	padding: 20px 120px ;
-	color: #532100;
-	background: #fff;
-	border-radius: 50px;
-}
-.positiontitle{
-	margin: 10px auto 20px ;
-	background: #ffe37d;
-	height: 50px;
-	border-radius: 20px;
-}
-.positiontitle h2{
-	line-height: 50px;
-}
-.地圖{
-	padding: 20px 150px;
-	height: 500px;
-	background: #eee;
+	padding: 0 15px;
+	float: left;
+	width: 30%;
 }
 
 /*友站連結*/
@@ -166,11 +153,27 @@ h1,h2,h3,h4,h5,h6,p{
 	height: 300px;
 	width: 100%;
 }
-#linkdetail
-{
-	height: 265px;
-	width: 100%;
+#linkdetail{
+	font-weight: bold;
+	padding: 50px 100px;
+	height: 165px;
 	background-color: #333;
+	color: #fff;
+}
+#linkdetail .img{
+	height: 100%;
+	float: left;
+	margin: 0 40px;
+}
+#linkdetail img{
+	/*margin: auto 20px;*/
+	width: 220px;
+	height: 190px;
+	border-radius: 40px;
+}
+#linkdetail .detail{
+	float: left;
+	margin: 30px;
 }
 #last{
 	height: 35px;
@@ -186,11 +189,16 @@ h1,h2,h3,h4,h5,h6,p{
 	display: block;
 	height: 50px;
 	width: 50px;
-	background: #fff;
+	background: #FFEDAD;
 	box-shadow: 0 0 2px;
 	position: fixed;
 	bottom: 60px;
 	right: 25px;
 	/*之後可刪*/
-	color: #000;
+	color: #532100;
+	font-weight: bold;
+	line-height: 50px;
+	text-align: center;
+	font-size: 30px;
+	border-radius: 10px;
 }
