--- a/css/puppygirls.css
+++ b/css/puppygirls.css
@@ -301,10 +301,12 @@ footer .infoo{
     align-items: center;
 }
 footer h2{
-	width: 200px;
-	height: 200px;
+	width: 300px;
 	margin: 0 auto;
-	background: #988;
+}
+footer h2 img{
+	width: 100%;
+	left: -100px;
 }
 footer .info{
 	width: 65%;
@@ -470,9 +472,119 @@ justify-content: center;
     font-size: 12px;
     font-weight: 600;
 }
+/*14吋資訊欄*/
+@media(max-width: 1600px){
+	footer h2{
+		width: 220px;
+		margin: 0 auto;
+	}
+	footer h2 img{
+		width: 100%;
+		left: -70px;
+	}
+	footer .address{
+		font-size: 12px;
+	}
+	footer .sns a{
+	    width: 32px;
+	    height: 32px;
+	    box-shadow: 5px 5px 0px 0px #f3f3f3;
+	}
+	footer .Links a h3{
+	    font-size: 14px;}
+	footer .Links a span{
+		font-size: 11px;
+	}
+	footer .Links a::after {
+	    width: 50px;
+	    height: 50px;
+	}
+}
+@media(max-width: 1200px){
+	footer .infoo{
+		margin-top: 30px;
+		margin: 0 auto;
+		width: 60%;
+		display: block;
+	}
+	footer h2{
+		margin: 50px auto 20px;
+	}
+	footer h2 img{
+		left: 0px;
+	}
+	footer .info{
+		width: 100%;
+	}
+	footer .up{
+		padding-top: 10px;
+		display: block;
+	}
+	footer .address{
+		margin: 10px auto 15px;
+		font-size: 14px;
+		text-align: left;
+		color: #513832;
+		font-weight: bolder;
+		line-height: 28px;
+	}	
+}
+/*手機資訊欄*/
+@media(max-width: 768px){
+	footer .infoo{
+		width:95%;
+		display: block;
+	}
+	footer h2{
+		width: 200px;
+		margin: 50px auto 20px;
+	}
+	footer .info{
+		width: 100%;
+	}
+	footer .up{
+		padding-top: 10px;
+		display: block;
+	}
+	footer .address{
+		margin: 0 auto;
+	}
+	footer .address p{
+		font-size: 14px;
+		color: #513832;
+		font-weight: bolder;
+		line-height: 28px;
+	    }
+	footer .sns{
+		width: 150px;
+	    margin: 10px auto 0;
+	}
+	footer .Links{
+	    z-index: 100;
+	    width: 95%;
+	    margin: 30px auto 50px;
+	}
+	footer .Links a{
+	    display: block;
+	    width: 100%;
+	    background: #fbf9f3;
+	    padding: 10px 15px;
+	    border-radius: 8px;
+	    margin-bottom: 5px;
+	}
+	footer .Links a h3{
+		color: #513832;
+	    font-weight: bold;
+	    font-size: 16px;
+	    margin-bottom: 8px; 
+	}
+	footer .Links a span{
+		letter-spacing: 1px;
+	}
+}
 /*回到頂部*/
 article a{
-	display: block;
+	display: none;
 	height: 80px;
     width: 80px;
     background:#FFEDAD;
