--- a/css/yuki.css
+++ b/css/yuki.css
@@ -594,7 +594,7 @@ main:after{
 /*資訊欄*/
 footer{
 	background: #fff;
-	padding:0 0;
+	padding: 5px 0 0;
 }
 footer .infoo{
 	margin-top: 30px;
@@ -605,10 +605,12 @@ footer .infoo{
     align-items: center;
 }
 footer h2{
-	width: 200px;
-	height: 200px;
+	width: 300px;
 	margin: 0 auto;
-	background: #988;
+}
+footer h2 img{
+	width: 100%;
+	left: -100px;
 }
 footer .info{
 	width: 65%;
@@ -777,8 +779,12 @@ justify-content: center;
 /*14吋資訊欄*/
 @media(max-width: 1600px){
 	footer h2{
-		width: 180px;
-		height: 180px;
+		width: 220px;
+		margin: 0 auto;
+	}
+	footer h2 img{
+		width: 100%;
+		left: -70px;
 	}
 	footer .address{
 		font-size: 12px;
@@ -805,6 +811,12 @@ justify-content: center;
 		width: 60%;
 		display: block;
 	}
+	footer h2{
+		margin: 50px auto 20px;
+	}
+	footer h2 img{
+		left: 0px;
+	}
 	footer .info{
 		width: 100%;
 	}
@@ -829,9 +841,7 @@ justify-content: center;
 	}
 	footer h2{
 		width: 200px;
-		height: 200px;
-		margin: 0 auto;
-		background: #988;
+		margin: 50px auto 20px;
 	}
 	footer .info{
 		width: 100%;
@@ -878,7 +888,7 @@ justify-content: center;
 }
 /*回到頂部*/
 article a{
-	display: block;
+	display: none;
 	height: 80px;
     width: 80px;
     background:#FFEDAD;
