--- a/css/trytry.css
+++ b/css/trytry.css
@@ -685,7 +685,7 @@ h1,h2,h3,h4,h5,h6,p,li{
   -webkit-transition: all .3s;
   transition: all .3s;
 }
-.hamburger,.hamburger2,#sp_menu{
+.hamburger,.hamburger2,#toggler{
 	display: none;
 }
 /*14吋選項列*/
@@ -726,25 +726,12 @@ h1,h2,h3,h4,h5,h6,p,li{
 }
 /*側選項列*/
 .hamburger{
-    position: sticky;
-	top: 50px;
-    width: 84px; 
-    height: 78px;
-    cursor: pointer;
-    z-index: 9999;
-    border-radius:0 75px 75px 0;
-    background:#fff;
-    -webkit-box-shadow: -2px 3px 0 1px rgba(227,222,199,1);
-    -moz-box-shadow: -2px 3px 0 1px rgba(227,222,199,1);
-    box-shadow: -2px 3px 0 1px rgba(227,222,199,1);
-}
-.hamburger2{
     position: fixed;
 	top: 50px;
     width: 84px; 
     height: 78px;
     cursor: pointer;
-    z-index: 999999;
+    z-index: 100000;
     border-radius:0 75px 75px 0;
     background:#fff;
     -webkit-box-shadow: -2px 3px 0 1px rgba(227,222,199,1);
@@ -759,7 +746,7 @@ h1,h2,h3,h4,h5,h6,p,li{
     height: 3px;
     background-color: #ffdd63;
     border-radius:3px;
-    transition: all .3s;
+    transition: all .3s ease-in-out;
 }
 .hamburger .hamburger_line-1{
     top: 24px;
@@ -776,22 +763,25 @@ h1,h2,h3,h4,h5,h6,p,li{
     top:43px;
     left: 10px;
 }
-.hamburger2 .hamburger_line-1{
+.hambuger_text02{
+	display: none;
+}
+#toggler:checked+label .hamburger .hamburger_line-1{
     transform: rotate(20deg);
     top:27px;
 }
-.hamburger2 .hamburger_line-2{
-    transform: rotate(-20deg);
+#toggler:checked+label .hamburger .hamburger_line-2{
+	transform: rotate(-20deg);
     top:27px;
 }
-.hamburger:visited{
+#toggler:checked+label .hamburger .hambuger_text01{
 	display: none;
 }
-.hamburger:visited .hamburger2{
+#toggler:checked+label .hamburger .hambuger_text02{
 	display: block;
 }
-.hamburger:visited #sp_menu {
-    display: block;
+#toggler:checked ~ #sp_menu{
+    opacity: 1;
 }
 /*手機選項欄*/
 #sp_menu{
@@ -801,23 +791,25 @@ h1,h2,h3,h4,h5,h6,p,li{
     left: 0;
     right: 0;
     width: 100%;
-    visibility: visible;
     background:#ffe069;
     height: 100vh;
-    transition: all .6s;
+    transition: all .3s ease-in-out;
     z-index: 99999;
-    padding:15px;
+    padding:18px;
     opacity: 100;
-    overflow-y: auto;
+    opacity: 0;
+    transform-origin: 50% 0;
 }
 .sp_menu_inr{
     width: 100%;
+    height: 100%;
     background:#fff;
-    padding:30px 25px;
-    border-radius:15px;
+    padding:30px;
+    border-radius:20px;
 }
-#sp_menu h3{
-    width: 172px;
+.logoo{
+	padding-top: 20px;
+    width: 280px;
     margin:0 auto;
 }
 #sp_menu h3 a{
@@ -832,18 +824,18 @@ h1,h2,h3,h4,h5,h6,p,li{
 }
 .sp_menu_list{
     width: 100%;
-    margin:40px auto 15px;
+    margin:30px auto 15px;
 }
 .sp_menu_list a{
     display:block;
     width: 100%;
     background:#fbf9f3;
     padding:20px 15px;
-    margin-bottom: 3px;
+    margin-bottom: 4px;
     text-align:left;
-    border-radius:10px;
+    border-radius:15px;
     margin-bottom: 10px;
-}   
+}
 .sp_menu_list a h3{
     display: inline-block;
     width: auto !Important;
@@ -865,22 +857,20 @@ h1,h2,h3,h4,h5,h6,p,li{
 }  
 #sp_menu h4{
 	width: 100%;
-	margin:0 auto;
+	margin:40px auto 0;
 }
 #sp_menu h4 img{
-	border-radius:10px;
+	border-radius:30px;
 }
-/*#sp_menu h4{
-    width: 200px;
-    margin:50px auto 15px;
-}*/
 #sp_menu .c_txt {
-    font-size: 12px;
+    font-size: 14px;
     margin:20px auto 0;
     text-align: center;
+    font-weight: bold;
+    color:#513832;
 }
 #sp_menu .sns_link {
-	width: 152px;
+	width: 120px;
 	margin:25px auto 40px;
 	-js-display: flex;
 	display:-webkit-box;
@@ -921,10 +911,6 @@ h1,h2,h3,h4,h5,h6,p,li{
 #sp_menu .fb {
     background:url(../image/素材/照片/fb.png);
 }
-
-
-
-
 /*網站概述*/
 header{
 	background: #fff;
