--- a/css/trytry.css
+++ b/css/trytry.css
@@ -685,7 +685,7 @@ h1,h2,h3,h4,h5,h6,p,li{
   -webkit-transition: all .3s;
   transition: all .3s;
 }
-.hamburger,.hamburger2,#toggler{
+.hamburger,.hamburger2,#toggler,#sp_menu{
 	display: none;
 }
 /*14吋選項列*/
@@ -717,12 +717,9 @@ h1,h2,h3,h4,h5,h6,p,li{
 	#pc_menu{
 		display: none;
 	}
-	.hamburger{
+	.hamburger,#sp_menu{
 		display: block;
 	}
-	/*#sp_menu{
-		display: block;
-	}*/
 }
 /*側選項列*/
 .hamburger{
@@ -799,10 +796,11 @@ h1,h2,h3,h4,h5,h6,p,li{
     opacity: 100;
     opacity: 0;
     transform-origin: 50% 0;
+    overflow-y: auto;
 }
 .sp_menu_inr{
     width: 100%;
-    height: 100%;
+    overflow-y: auto;
     background:#fff;
     padding:30px;
     border-radius:20px;
